--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.CAMERA" />
-
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -21,7 +20,13 @@
         android:roundIcon="@mipmap/icono_calendio_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Memory_m"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".vista.DatosUsuarios"
+            android:exported="false" />
+        <activity
+            android:name=".vista.AdminActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -38,7 +43,6 @@
         <activity
             android:name=".vista.calendario"
             android:exported="false" />
-
         <activity
             android:name=".vista.MenuPrincipal"
             android:exported="false" />
@@ -50,7 +54,7 @@
             android:exported="false" />
         <activity
             android:name=".vista.PantallaDeCarga"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -66,7 +70,7 @@
 
         <activity
             android:name=".vista.MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
